# cnn-weather-recognition

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  cnn_transfer_learning.ipynb  cnn_transfer_learning.py  heroku.yml  pyproject.toml  requirements.txt
data/: labels.json
tests/: test_api.py  test_weather_recognition.py
