[tool.poetry]
name = "weather-recognition"
version = "0.1.0"
description = ""
authors = ["RikiSot <rkgomezz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
